# api-gateway/docs/swagger.yaml
@@ -156,6 +156,14 @@ definitions:
       password:
         type: string
     type: object
+  models.UserOtp:
+    properties:
+      email:
+        example: user@example.com
+        type: string
+    required:
+    - email
+    type: object
   models.UserSignup:
     properties:
       age:
@@ -205,7 +213,7 @@ definitions:
       status_code:
         type: integer
     type: object
-host: exclusivestore.xyz
+host: localhost:3000
 info:
   contact: {}
   description: SOCIAL MATCH API Gateway server.
@@ -606,6 +614,131 @@ paths:
       summary: Get room join requests
       tags:
       - Rooms
+  /user:
+    get:
+      consumes:
+      - application/json
+      description: Get all users
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Get All Users
+      tags:
+      - users
+  /user/{user_id}/interests:
+    get:
+      description: Get a list of user interests
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User interests
+          schema:
+            items:
+              items:
+                type: string
+              type: array
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Get user interests
+      tags:
+      - users
+  /user/{user_id}/preferences:
+    get:
+      description: Get a list of user preferences
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User preferences
+          schema:
+            items:
+              items:
+                $ref: '#/definitions/models.Preferences'
+              type: array
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Get user preferences
+      tags:
+      - users
+  /user/add-interest:
+    post:
+      consumes:
+      - application/json
+      description: Add user interest
+      parameters:
+      - description: Add interest request
+        in: body
+        name: user_id
+        required: true
+        schema:
+          $ref: '#/definitions/models.AddUserInterestRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Add User Interest
+      tags:
+      - users
+  /user/add-preference:
+    post:
+      consumes:
+      - application/json
+      description: Add user preference
+      parameters:
+      - description: Add preference request
+        in: body
+        name: user_id
+        required: true
+        schema:
+          $ref: '#/definitions/models.AddUserPreferenceRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Add User Preference
+      tags:
+      - users
   /user/block:
     post:
       consumes:
@@ -655,6 +788,136 @@ paths:
       summary: Get user connections
       tags:
       - Users
+  /user/delete-interest:
+    delete:
+      consumes:
+      - application/json
+      description: Delete user interest
+      parameters:
+      - description: Delete interest request
+        in: body
+        name: user_id
+        required: true
+        schema:
+          $ref: '#/definitions/models.DeleteUserInterestRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Delete User Interest
+      tags:
+      - users
+  /user/delete-preference:
+    delete:
+      consumes:
+      - application/json
+      description: Delete user preference
+      parameters:
+      - description: Delete preference request
+        in: body
+        name: user_id
+        required: true
+        schema:
+          $ref: '#/definitions/models.DeleteUserPreferenceRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Delete User Preference
+      tags:
+      - users
+  /user/edit:
+    put:
+      consumes:
+      - application/json
+      description: Edit user details
+      parameters:
+      - description: Edit details
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.UserUpdateDetails'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Edit User Details
+      tags:
+      - users
+  /user/edit-interest:
+    put:
+      consumes:
+      - application/json
+      description: Edit user interest
+      parameters:
+      - description: Edit interest request
+        in: body
+        name: user_id
+        required: true
+        schema:
+          $ref: '#/definitions/models.EditUserInterestRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Edit User Interest
+      tags:
+      - users
+  /user/edit-preference:
+    put:
+      consumes:
+      - application/json
+      description: Edit user preference
+      parameters:
+      - description: Edit preference request
+        in: body
+        name: user_id
+        required: true
+        schema:
+          $ref: '#/definitions/models.EditUserPreferenceRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Edit User Preference
+      tags:
+      - users
   /user/follow:
     post:
       consumes:
@@ -683,283 +946,7 @@ paths:
       summary: Follow a user
       tags:
       - Users
-  /user/room:
-    get:
-      description: Get a list of all rooms
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              items:
-                $ref: '#/definitions/models.Room'
-              type: array
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Get all rooms
-      tags:
-      - Rooms
-  /users:
-    get:
-      consumes:
-      - application/json
-      description: Get all users
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/models.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Get All Users
-      tags:
-      - users
-  /users/{user_id}/interests:
-    get:
-      description: Get a list of user interests
-      parameters:
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: User interests
-          schema:
-            items:
-              items:
-                type: string
-              type: array
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Get user interests
-      tags:
-      - users
-  /users/{user_id}/preferences:
-    get:
-      description: Get a list of user preferences
-      parameters:
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: User preferences
-          schema:
-            items:
-              items:
-                $ref: '#/definitions/models.Preferences'
-              type: array
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Get user preferences
-      tags:
-      - users
-  /users/add-interest:
-    post:
-      consumes:
-      - application/json
-      description: Add user interest
-      parameters:
-      - description: Add interest request
-        in: body
-        name: user_id
-        required: true
-        schema:
-          $ref: '#/definitions/models.AddUserInterestRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/response.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Add User Interest
-      tags:
-      - users
-  /users/add-preference:
-    post:
-      consumes:
-      - application/json
-      description: Add user preference
-      parameters:
-      - description: Add preference request
-        in: body
-        name: user_id
-        required: true
-        schema:
-          $ref: '#/definitions/models.AddUserPreferenceRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/response.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Add User Preference
-      tags:
-      - users
-  /users/delete-interest:
-    delete:
-      consumes:
-      - application/json
-      description: Delete user interest
-      parameters:
-      - description: Delete interest request
-        in: body
-        name: user_id
-        required: true
-        schema:
-          $ref: '#/definitions/models.DeleteUserInterestRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/response.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Delete User Interest
-      tags:
-      - users
-  /users/delete-preference:
-    delete:
-      consumes:
-      - application/json
-      description: Delete user preference
-      parameters:
-      - description: Delete preference request
-        in: body
-        name: user_id
-        required: true
-        schema:
-          $ref: '#/definitions/models.DeleteUserPreferenceRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/response.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Delete User Preference
-      tags:
-      - users
-  /users/edit:
-    put:
-      consumes:
-      - application/json
-      description: Edit user details
-      parameters:
-      - description: Edit details
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/models.UserUpdateDetails'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/models.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Edit User Details
-      tags:
-      - users
-  /users/edit-interest:
-    put:
-      consumes:
-      - application/json
-      description: Edit user interest
-      parameters:
-      - description: Edit interest request
-        in: body
-        name: user_id
-        required: true
-        schema:
-          $ref: '#/definitions/models.EditUserInterestRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/response.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Edit User Interest
-      tags:
-      - users
-  /users/edit-preference:
-    put:
-      consumes:
-      - application/json
-      description: Edit user preference
-      parameters:
-      - description: Edit preference request
-        in: body
-        name: user_id
-        required: true
-        schema:
-          $ref: '#/definitions/models.EditUserPreferenceRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/response.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Edit User Preference
-      tags:
-      - users
-  /users/login:
+  /user/login:
     post:
       consumes:
       - application/json
@@ -985,25 +972,25 @@ paths:
       summary: User Login
       tags:
       - users
-  /users/otp-request:
+  /user/otp:
     post:
       consumes:
       - application/json
       description: Request OTP for user verification
       parameters:
-      - description: OTP request details
+      - description: email
         in: body
-        name: request
+        name: user
         required: true
         schema:
-          type: object
+          $ref: '#/definitions/models.UserOtp'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/models.Otp'
         "400":
           description: Bad Request
           schema:
@@ -1011,8 +998,7 @@ paths:
       summary: Request OTP
       tags:
       - users
-  /users/otp-verify:
-    post:
+    put:
       consumes:
       - application/json
       description: Verify user OTP
@@ -1037,8 +1023,8 @@ paths:
       summary: Verify OTP
       tags:
       - users
-  /users/profile-photo:
-    post:
+  /user/profile:
+    patch:
       consumes:
       - multipart/form-data
       description: Update user's profile photo
@@ -1065,7 +1051,28 @@ paths:
       summary: Update Profile Photo
       tags:
       - users
-  /users/signup:
+  /user/room:
+    get:
+      description: Get a list of all rooms
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              items:
+                $ref: '#/definitions/models.Room'
+              type: array
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Get all rooms
+      tags:
+      - Rooms
+  /user/signup:
     post:
       consumes:
       - application/json
